all shannon reqs go to /v1 only

--- a/charts/guard/templates/routing/httproute-subdomain.yaml
+++ b/charts/guard/templates/routing/httproute-subdomain.yaml
@@ -99,6 +99,11 @@ spec:
               set:
               - name: target-service-id
                 value: "{{ .shannonServiceId }}"
+          - type: URLRewrite
+            urlRewrite:
+              path:
+                type: ReplaceFullPath
+                replaceFullPath: /v1 # Makes sure ALL requests go to /v1 only.
         {{- end }}
       filters:
         - type: RequestHeaderModifier
