--- a/charts/guard/templates/routing/httproute-subdomain.yaml
+++ b/charts/guard/templates/routing/httproute-subdomain.yaml
@@ -103,13 +103,12 @@ spec:
         {{- end }}
       filters:
         # Custom filter to rewrite all /v1/* paths to just /v1 for the Shannon service
-        # We cannot use native rewrite here: Failed to process route rule 0 backendRef 1: Specific filter is not
-        # supported within BackendRef, only RequestHeaderModifier, ResponseHeaderModifier
-        # and gateway.envoyproxy.io/HTTPRouteFilter are supported.
-        - type: gateway.envoyproxy.io/HTTPRouteFilter
-          gateway.envoyproxy.io/HTTPRouteFilter:
+        # We cannot use URLRewrite directly, must use ExtensionRef to custom HTTPRouteFilter
+        - type: ExtensionRef
+          extensionRef:
+            group: gateway.envoyproxy.io
+            kind: HTTPRouteFilter
             name: {{ include "guard-helm.name" $ }}-shannon-url-rewrite
-            namespace: {{ $.Values.global.namespace }}
         - type: RequestHeaderModifier
           requestHeaderModifier:
             set:
