feat: configure rolling update deployment strategy with maxSurge/maxUnavailable settings

--- a/charts/path/templates/deployment.yaml
+++ b/charts/path/templates/deployment.yaml
@@ -16,8 +16,10 @@ metadata:
     {{- end }}
 spec:
   replicas: {{ .Values.replicas }}
-  strategy:
-    type: {{ default "Recreate" $.Values.strategy }}
+  {{- if .Values.strategy }}
+  strategy: 
+    {{- toYaml .Values.strategy | nindent 4 }}
+  {{- end }}
   selector:
     matchLabels:
       deploymentname: {{ include "path.fullname" . }}
