ability to change healthcheck endpoint

--- a/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
+++ b/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
@@ -23,9 +23,9 @@ spec:
     - backendRefs:
         - group: ""
           kind: Service
-          name: {{ $.Values.global.serviceName }}
-          namespace: {{ $.Values.global.namespace }}
-          port: {{ $.Values.global.port }}
+          name: {{ $.Values.healthCheck.serviceName | default $.Values.global.serviceName }}
+          namespace: {{ $.Values.healthCheck.namespace | default $.Values.global.namespace }}
+          port: {{ $.Values.healthCheck.port | default $.Values.global.port }}
       matches:
         - path:
             type: Exact
@@ -35,4 +35,4 @@ spec:
           urlRewrite:
             path:
               type: ReplaceFullPath
-              replaceFullPath: /healthz
+              replaceFullPath: {{ $.Values.healthCheck.path | default "/healthz" }}
