--- a/charts/guard/templates/routing/httproute-healthz.yaml
+++ b/charts/guard/templates/routing/httproute-healthz.yaml
@@ -20,11 +20,21 @@ spec:
     - backendRefs:
         - group: ""
           kind: Service
-          name: {{ $.Values.global.serviceName }}
-          namespace: {{ $.Values.global.namespace }}
-          port: {{ $.Values.global.port }}
+          name: {{ $.Values.healthCheck.serviceName | default $.Values.global.serviceName }}
+          namespace: {{ $.Values.healthCheck.namespace | default $.Values.global.namespace }}
+          port: {{ $.Values.healthCheck.port | default $.Values.global.port }}
       matches:
         # /healthz route returns the health of the PATH service.
         - path:
             type: Exact
-            value: /healthz
+            value: {{ $.Values.healthCheck.path | default "/healthz" }}
+    - backendRefs:
+        - group: ""
+          kind: Service
+          name: {{ $.Values.disqualifiedEndpoints.serviceName | default $.Values.global.serviceName }}
+          namespace: {{ $.Values.disqualifiedEndpoints.namespace | default $.Values.global.namespace }}
+          port: {{ $.Values.disqualifiedEndpoints.port | default $.Values.global.port }}
+      matches:
+        - path:
+            type: Exact
+            value: {{ $.Values.disqualifiedEndpoints.path | default "/disqualified_endpoints" }}
