Make shannon services the default

--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -10,14 +10,14 @@ global:
   serviceName: path-http
   port: 3069
 
-# Optional health check configuration
-# - Override settings for health check endpoint
-# - Defaults to global values when not specified
-# healthCheck:
-#   serviceName: path-http       # Service to target for health checks (defaults to global.serviceName)
-#   namespace: path             # Namespace for health check service (defaults to global.namespace)
-#   port: 3069                  # Port for health check service (defaults to global.port)
-#   path: "/healthz"           # Path for health checks (defaults to "/healthz")
+  # Optional health check configuration
+  # - Override settings for health check endpoint
+  # - Defaults to global values when not specified
+  # healthCheck:
+  #   serviceName: path-http       # Service to target for health checks (defaults to global.serviceName)
+  #   namespace: path             # Namespace for health check service (defaults to global.namespace)
+  #   port: 3069                  # Port for health check service (defaults to global.port)
+  #   path: "/healthz"           # Path for health checks (defaults to "/healthz")
 
   # Settings for traffic shifting
   shannonBetaNamespace: middleware
@@ -75,19 +75,19 @@ domain: "example.com"
 #   - Supports both Subdomain and Header-based routing
 # - For more information, see:
 #   - https://path.grove.city/operate/helm/guard#routing
-services:
-  # Morse-specific services
-  - serviceId: F00C
-    shannonServiceId: eth
-    aliases:
-      - eth
-      - eth-mainnet
-    # trafficSplitting:
-    #   enabled: true
-    #   weights:
-    #     path: 60
-    #     shannonBeta: 30
-    #     shannonMainnet: 20
+# services:
+# Morse-specific services
+# - serviceId: F00C
+#   shannonServiceId: eth
+#   aliases:
+#     - eth
+#     - eth-mainnet
+# trafficSplitting:
+#   enabled: true
+#   weights:
+#     path: 60
+#     shannonBeta: 30
+#     shannonMainnet: 20
 
 # GUARD auth configuration
 # Exactly one auth method must be enabled:
